--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,52 @@
+.above{
+    z-index: 17;
+}
+.absolute{
+    position: absolute;
+}
+.relative{
+    position: relative;
+}
 
+.fitContent{
+    width: 30%;
+}
+
+.statusCss{
+    top:0;
+    left:0;
+    position: absolute;
+    z-index: 17;
+}
+
+.rotate30 {
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    transform: rotate(30deg);
+}
+
+.rotate45 {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.rotate20 {
+    -webkit-transform: rotate(-20deg);
+    -moz-transform: rotate(-20deg);
+    -o-transform: rotate(-20deg);
+    -ms-transform: rotate(-20deg);
+    transform: rotate(-20deg);
+}
+
+.rotate15 {
+    -webkit-transform: rotate(15deg);
+    -moz-transform: rotate(15deg);
+    -o-transform: rotate(15deg);
+    -ms-transform: rotate(15deg);
+    transform: rotate(15deg);
+}
