--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,21 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+body {
+    background: url(/assets/app_bg.jpg) no-repeat center/cover fixed;
+  }
+
+ion-content {
+    --background: none;
+}
+
+.m-10{
+    margin: 10px;
+}
+.m-20{
+    margin: 20px;
+}
+.mt-40{
+    margin-top: 40px;
+}
