stop button in player

--- a/src/app/message/message.page.html
+++ b/src/app/message/message.page.html
@@ -19,4 +19,5 @@
   </p>
 
   <ion-range #range [(ngModel)] ="progress" max="100" (touchend)="seek()" (mouseup)="seek()"></ion-range>
+  <ion-button color="danger" expand="full" (click)="stop()" style="vertical-align: middle">Stop my heart from breaking</ion-button>
 </ion-content>
